[FIXED] z-index issue

--- a/Pengin/react-app/src/components/Navbar.css
+++ b/Pengin/react-app/src/components/Navbar.css
@@ -5,6 +5,7 @@
   flex-direction: row;
 
   background-color: var(--main-bg-color);
+  z-index: 1;
 }
 
 .Navbar .Logo {
