--- a/Pengin/react-app/src/pages/styles/Manga.css
+++ b/Pengin/react-app/src/pages/styles/Manga.css
@@ -1,24 +1,35 @@
-.MangaPage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100vw;
-}
-
 .BackgroundImage {
   width: 100vw;
-  height: 25vh;
+  height: 60vh;
   position: absolute;
+  overflow: hidden;
   top: 0px;
+  left: 0px;
+  z-index: 0;
 }
 
-img {
-  width: 100vw;
-  position: absolute;
-  top: -500px;
+#cropped_image {
+  width: 100%;
+  height: 100%;
+  /* position: relative; */
+  transform: translateY(10%);
   object-fit: cover;
-  clip: rect(0px, auto, 800px, 0px);
-  filter: blur(4px) brightness(0.7) contrast(0.7);
-  z-index: -1;
+  filter: blur(5px) brightness(0.8) contrast(0.9);
+}
+
+.MangaInfo {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  z-index: 10;
+}
+
+.MangaOverviewPage .Thumbnail {
+  width: 15vw;
+}
+
+h1 {
+  background-color: black;
+  z-index: 10;
 }
